force-app/main/default/objects/Assessor_FAQ__mdt/Assessor_FAQ__mdt.object-meta.xml
<CustomObject>
    <description>FAQ entries deflected by the Assessor chat panel (INT-028). One record per topic; Trigger_Phrases is a semicolon-separated keyword list the LWC matches free-text against; Answer_Body renders inline.</description>
    <label>Assessor FAQ</label>
    <pluralLabel>Assessor FAQs</pluralLabel>
</CustomObject>