force-app/main/default/objects/Assessor_FAQ__mdt/fields/Answer_Body__c.field-meta.xml
<CustomField>
    <fullName>Answer_Body__c</fullName>
    <label>Answer Body</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>