force-app/main/default/objects/Assessor_FAQ__mdt/fields/Trigger_Phrases__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Phrases__c</fullName>
    <label>Trigger Phrases</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>